# pico-green

./: .gitignore  CMakeLists.txt  FreeRTOS_Kernel_import.cmake  LICENSE  compose.yaml  lwip_import.cmake
docker/: .tmux.conf  Dockerfile  entrypoint
port/FreeRTOS-Kernel/: FreeRTOSConfig.h  IdleMemory.c
src/: CMakeLists.txt  main.cpp
src/flash/: CMakeLists.txt  flash.cpp  flash.h
src/wifi/: CMakeLists.txt  wifi.cpp  wifi.h
